# mudpack

./: .pre-commit-config.yaml  README.md  mudpack.py  pyproject.toml  requirements.txt  test-requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yaml
testing/: client.py  server.py
tests/: test_foo.py  test_mudpack.py
