[project]
name = "mudpack"
version = "0.1.0"
description = "A simple UDP client for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.autoflake]
recursive = true

[tool.mypy]
files = "mudpack.py"
ignore_missing_imports = true
strict = true
exclude = [
    '^tests/test_.+.py$',
]

[tool.coverage.run]
plugins = ["covdefaults"]
omit = []

[tool.coverage.html]
directory = "artifacts/htmlcov/"
